RESOLVED FIXED22284
Incorrect assert caused by uninitialized variable in NetworkStateNotifier
https://bugs.webkit.org/show_bug.cgi?id=22284
Summary Incorrect assert caused by uninitialized variable in NetworkStateNotifier
Kevin Ollivier
Reported 2008-11-15 13:22:44 PST
If m_networkStateChangedFunction is not initialized to null, then the assert checking that it wasn't set will fail even though it hasn't been set. This has been fixed already for Safari on Win/Mac and Chrome, but the issue exists for the fallback implementation.
Attachments
Fix that initializes m_networkStateChangedFunction (991 bytes, patch)
2008-11-15 13:23 PST, Kevin Ollivier
timothy: review+
Kevin Ollivier
Comment 1 2008-11-15 13:23:52 PST
Created attachment 25192 [details] Fix that initializes m_networkStateChangedFunction
Kevin Ollivier
Comment 2 2008-11-15 15:39:56 PST
Landed in r38436, thanks!
Note You need to log in before you can comment on or make changes to this bug.