Reviewed by Timothy Hatcher.

Initialize m_networkStateChangedFunction to 0 as otherwise the check for null will fail.
        
https://bugs.webkit.org/show_bug.cgi?id=22284


git-svn-id: svn://svn.chromium.org/blink/trunk@38436 bbb929c8-8fbe-4397-9dbb-9b2b20218538