third_party/WebKit/WebCore/platform/network/NetworkStateNotifier.h
@@ -86,6 +86,7 @@ private:
 
 inline NetworkStateNotifier::NetworkStateNotifier()
     : m_isOnLine(true)
+    , m_networkStateChangedFunction(0)
 {    
 }
 
